--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -1479,6 +1479,7 @@ spa:
         #>created_on: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
+        #>delivered: '(((DELIVERED)))'
         #>id: 'ID'
         #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
