--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -2233,19 +2233,18 @@ eng:
         exclusion: '{{attribute}} is reserved'
         greater_than: '{{attribute}} must be greater than {{count}}'
         greater_than_or_equal_to: '{{attribute}} must be greater than or equal to {{count}}'
-        #>included_in: 'La valeur de %{attribute} doit être comprise entre %{minimum} et %{maximum}'
+        #>included_in: 'La valeur de {{attribute}} doit être comprise entre {{minimum}} et {{maximum}}'
         inclusion: '{{attribute}} is not included in the list'
         invalid: '{{attribute}} is invalid'
         invalid_at: '{{attribute}} is_invalid. Error near {{error}}'
-        #>invalid_token: '%{attribute} est invalide. Symbole inconnu %{error}. Les symboles acceptés sont %{accepted}.'
+        #>invalid_token: '{{attribute}} est invalide. Symbole inconnu {{error}}. Les symboles acceptés sont {{accepted}}.'
         less_than: '{{attribute}} must be less than {{count}}'
         less_than_or_equal_to: '{{attribute}} must be less than or equal to {{count}}'
         not_a_number: '{{attribute}} is not a number'
         #>nothing_to_pay: 'Il n''y a rien à payer. Si vous voulez enregistrer un acompte, n''oubliez pas de le préciser.'
         odd: '{{attribute}} must be odd'
-        #>posterior: 'La date %{attribute} doit être postérieure à %{to}'
+        #>posterior: 'La date {{attribute}} doit être postérieure à {{to}}'
         #>record_has_been_already_validated: 'La pièce a été validée et ne peut plus être modifiée'
-        #>record_invalid: 'Validations échouées : %{errors}'
         taken: '{{attribute}} has already been taken'
         too_long: '{{attribute}} is too long (maximum is {{count}} characters)'
         too_short: '{{attribute}} is too short (minimum is {{count}} characters)'
@@ -2254,54 +2253,54 @@ eng:
         cash:
           #>unvalid_bban: 'Un ou plusieurs éléments du RIB sont incorrects.'
         complement_datum:
-          #>greater_than: '%{field} est trop grand (%{maximum} maximum)'
-          #>less_than: '%{field} est trop petit (%{minimum} minimum)'
-          #>required: '%{field} doit être renseigné'
-          #>too_long: '%{field} est trop long (%{length} caractères)'
+          #>greater_than: '{{field}} est trop grand ({{maximum}} maximum)'
+          #>less_than: '{{field}} est trop petit ({{minimum}} minimum)'
+          #>required: '{{field}} doit être renseigné'
+          #>too_long: '{{field}} est trop long ({{length}} caractères)'
         delivery_line:
-          #>greater_than_undelivered_quantity: 'La quantité de produit %{product} à livrer dépasse la quantité non livrée (%{maximum}%{unit})'
+          #>greater_than_undelivered_quantity: 'La quantité de produit {{product}} à livrer dépasse la quantité non livrée ({{maximum}}{{unit}})'
         embankment:
-          #>must_be_a_bank_account: '%{field} doit être un compte bancaire et non une caisse'
+          #>must_be_a_bank_account: '{{field}} doit être un compte bancaire et non une caisse'
         entity:
-          #>missing_title: '%{attribute} doit contenir la dénomination sociale "%{title}"'
-          #>nature_do_not_allow_a_first_name: 'Le type "%{nature}" sélectionné ne permet de renseigner un prénom'
+          #>missing_title: '{{attribute}} doit contenir la dénomination sociale "{{title}}"'
+          #>nature_do_not_allow_a_first_name: 'Le type "{{nature}}" sélectionné ne permet de renseigner un prénom'
         financialyear:
           attributes:
             started_on:
               #>consecutive: 'L''exercice comptable doit être consécutif à un autre. Il doit commencer au lendemain de la fin du précédent.'
             stopped_on:
-              #>end_of_month: '%{attribute} doit être un date de fin de mois'
-          #>overlap: '%{attribute} se trouve sur un exercice existant'
+              #>end_of_month: '{{attribute}} doit être un date de fin de mois'
+          #>overlap: '{{attribute}} se trouve sur un exercice existant'
         journal:
           attributes:
             closed_on:
-              #>end_of_month: '%{attribute} doit correspondre à une date de fin de mois (%{closed_on})'
+              #>end_of_month: '{{attribute}} doit correspondre à une date de fin de mois ({{closed_on}})'
         journal_entry:
           #>closed_entry: 'L''écriture est verrouillée. Il n''est pas possible de la modifier.'
           #>empty_amounts: 'L''écriture doit être renseignée soit au débit, soit au crédit.'
           #>unvalid_amounts: 'L''écriture doit être renseignée soit au débit, soit au crédit mais pas les deux en même temps.'
         journal_record:
-          #>closed_journal: 'Le journal est clôturé au %{on} donc vous ne pouvez plus créer, modifier ou supprimer de pièces jusqu''à cette date-là.'
+          #>closed_journal: 'Le journal est clôturé au {{on}} donc vous ne pouvez plus créer, modifier ou supprimer de pièces jusqu''à cette date-là.'
           #>out_of_financialyear: 'La pièce doit être saisie durant l''exercice'
           #>unbalanced: 'La pièce n''est pas équilibrée'
         payment_part:
         price:
           #>already_defined: 'Un prix a déjà été défini pour cette liste de prix et ce produit'
-          #>range_overlap: 'L''intervalle de quantité en chevauche un autre (de %{min} à %{max})'
+          #>range_overlap: 'L''intervalle de quantité en chevauche un autre (de {{min}} à {{max}})'
         purchase_order_line:
-          #>location_can_not_receive_product: 'Le réservoir %{location} ne peut pas recevoir le produit %{product}, il contient déjà le produit %{contained_product}.'
-          #>serial_already_used_with_an_other_product: '%{attribute} a déjà été utilisé pour un autre type de produit du même fournisseur'
+          #>location_can_not_receive_product: 'Le réservoir {{location}} ne peut pas recevoir le produit {{product}}, il contient déjà le produit {{contained_product}}.'
+          #>serial_already_used_with_an_other_product: '{{attribute}} a déjà été utilisé pour un autre type de produit du même fournisseur'
         sale_order_line:
-          #>can_not_use_this_tracking: 'Vous ne  pouvez pas utiliser le lot %{tracking}, la quantité commandée est supérieure à la quantité disponible'
+          #>can_not_use_this_tracking: 'Vous ne  pouvez pas utiliser le lot {{tracking}}, la quantité commandée est supérieure à la quantité disponible'
           #>currency_is_not_sale_order_currency: 'La devise du prix du produit ne correspond pas celle définie pour la vente'
           #>error_no_found_price: 'Aucun prix n'' a pu être trouvé pour ce produit et cette liste de tarif'
-          #>location_can_not_transfer_product: 'Le produit %{product} ne peut être sorti du réservoir %{location}, celui-ci contient %{contained_product}.'
+          #>location_can_not_transfer_product: 'Le produit {{product}} ne peut être sorti du réservoir {{location}}, celui-ci contient {{contained_product}}.'
         stock:
-          #>product_cannot_be_in_location: 'Le produit ne peut pas être stocké dans le réservoir %{location}'
+          #>product_cannot_be_in_location: 'Le produit ne peut pas être stocké dans le réservoir {{location}}'
         stock_transfer:
-          #>location_can_not_receive_product: 'Le lieu de stockage %{location} ne peut recevoir le produit %{product}, il contient déjà le produit %{contained_product}'
-          #>location_can_not_transfer_product: 'Vous ne pouvez pas tranférer le produit %{product} depuis le lieu de stockage %{location}, celui-ci contient le produit %{contained_product}'
-          #>location_can_not_waste_product: 'Vous ne pouvez pas enregistrer de perte pour  le produit %{product} depuis le lieu de stockage %{location}, celui-ci contient le produit %{contained_product}'
+          #>location_can_not_receive_product: 'Le lieu de stockage {{location}} ne peut recevoir le produit {{product}}, il contient déjà le produit {{contained_product}}'
+          #>location_can_not_transfer_product: 'Vous ne pouvez pas tranférer le produit {{product}} depuis le lieu de stockage {{location}}, celui-ci contient le produit {{contained_product}}'
+          #>location_can_not_waste_product: 'Vous ne pouvez pas enregistrer de perte pour  le produit {{product}} depuis le lieu de stockage {{location}}, celui-ci contient le produit {{contained_product}}'
           #>locations_can_not_be_identical: 'Les lieux de stockage (départ et arrivée) ne peuvent pas être identiques'
         subscription:
           #>entity_must_be_the_same_as_the_contact_entity: 'La personne de l''abonnement doit être la même que celle du contact'
@@ -2316,13 +2315,13 @@ eng:
           other: '{{count}} errors prohibited this {{model}} from being saved'
     models:
       account: 'Account'
-      #>account_balance: 'Balance de compte'
+      account_balance: 'Account balance'
       #>area: 'Zone postale'
       #>bank_statement: 'Relevé de compte bancaire'
-      #>cash: 'Trésorerie'
+      cash: 'Cash'
       company: 'Company'
-      #>complement: 'Champ complémentaire'
-      #>complement_choice: 'Choix de champ complémentaire'
+      complement: 'Complement field'
+      complement_choice: 'Complement field choice'
       #>complement_datum: 'Donnée complémentaire de fiche'
       #>contact: 'Contact'
       #>currency: 'Devise'
