--- a/config/locales/eng/general.yml
+++ b/config/locales/eng/general.yml
@@ -77,7 +77,7 @@ eng:
     duration: '{{hours}}h {{minutes}}min'
     dyta:
     edit: 'Edit'
-    #>example: 'Exemple&nbsp;: {{value}}'
+    example: 'Example&nbsp;: {{value}}'
     export: 'Export'
     extract: 'Extract'
     filter: 'Filter'
@@ -90,9 +90,9 @@ eng:
     indicator: 'Dashboard'
     #>info: 'Information&nbsp;: {{value}}'
     letter: 'Letter'
-    #>letter_conclusion: ' Veuillez agréer, Chère Madame, Cher Monsieur, l''expression de mes salutations distinguées.'
-    #>letter_function_title: 'Chère Madame, Cher Monsieur'
-    #>letter_introduction: 'Suite à notre conversation, je vous communique les éléments du devis.'
+    letter_conclusion: 'Please accept, Dear Madam, Dear Sir, the assurances of my highest consideration.'
+    letter_function_title: 'Dear madam, dear sir'
+    letter_introduction: 'Following our conversation, I give you the elements of the estimate.'
     lock: 'Lock'
     mail: 'Send an email'
     n: 'Non'
@@ -133,12 +133,10 @@ eng:
   models:
     account:
       #>default_account_name: 'Compte comptable {{number}}'
-      #>error_delete: 'Le compte ne peut être effacé car il Contains des sous-comptes.'
+      #>error_delete: 'Le compte ne peut être effacé car il contient des sous-comptes.'
       label: '{{number}} - {{name}}'
-    bank_account:
-    bank_account_statement:
     bank_statement:
-      #>error_account_children: 'Le compte comptable ne peut pas être supprimé car il Contains des sous-comptes'
+      #>error_account_children: 'Le compte comptable ne peut pas être supprimé car il contient des sous-comptes'
       #>error_journal_statement: 'Le relevé bancaire est spécifique à un journal.'
       #>error_period_statement: 'L''intervalle de temps est incorrect pour le relevé bancaire.'
       #>error_print_statement: 'Le relevé doit être imprimé après son dernier enregistrement.'
@@ -169,6 +167,11 @@ eng:
             immediate: 'Immediatly'
             standard: 'Standard (30d EOM)'
         department_name: 'Default department'
+        document_natures:
+          #>invoice: 'Facture'
+          #>journal: 'Journal'
+          #>journals: 'Journaux'
+          #>sale_order: 'Vente'
         document_templates:
           accountancy:
             balance_sheet:
@@ -309,6 +312,9 @@ eng:
       import:
         dont_use: '-- Do not use --'
         generate_string_complement: '-- Create a personalized field (text) --'
+      #>invoice_creation: 'Création d''une facture'
+      #>purchase_order_creation: 'Création d''un achat'
+      #>sale_order_creation: 'Création d''un devis'
       sale_orders: 'Sale orders'
     complement:
       natures:
@@ -324,9 +330,13 @@ eng:
       error_unvalid_format_for_expression: 'Unvalid format for expression'
     delivery:
       label: '{{client}} at {{address}}'
-      sale: 'Sale #{{number}}'
+      natures:
+        #>cip: 'Livraison avec assurance'
+        #>cpt: 'Livraison sans assurance'
+        #>exw: 'Remise en main propre'
+      sale: 'Sale {{number}}'
     delivery_line:
-      sale: 'Sale #{{number}}'
+      sale: 'Sale {{number}}'
     document_template:
       error_attribute: 'The key word {{value}} is incorrect. The possibilities are: {{possibilities}}'
       families:
@@ -382,8 +392,8 @@ eng:
       inventory: 'Inventory'
     invoice:
       label:
-        credit: 'Credit #{{number}}'
-        normal: 'Invoice #{{number}}'
+        credit: 'Credit {{number}}'
+        normal: 'Invoice {{number}}'
       to_accountancy: '[{{resource}} {{number}}] {{products}} for {{client}} ({{sale_order}})'
     invoice_line:
       no_product: '[No product]'
@@ -396,7 +406,7 @@ eng:
         sales: 'Sales'
         various: 'Various operations'
     journal_record:
-      record_cancel: 'Cancel of record #{{number}}: {{name}}'
+      record_cancel: 'Cancel of record {{number}}: {{name}}'
     listing_node:
       add_filter: ' Add a filter'
       all_columns: '-- All columns --'
@@ -463,7 +473,7 @@ eng:
       stock_move: '{{origin}} ({{code}})'
       subscription_label:
         period: 'Subscription {{subscription_nature}} for {{entity}} at {{address}} from {{start}} to {{finish}}'
-        quantity: 'Subscription {{subscription_nature}} for {{entity}} at {{address}} from #{{start}} to #{{finish}}'
+        quantity: 'Subscription {{subscription_nature}} for {{entity}} at {{address}} from {{start}} to {{finish}}'
       supply_methods:
         buy: 'Buy'
         produce: 'Produce'
@@ -472,6 +482,7 @@ eng:
         purchases: 'Purchases'
         rent: 'Location'
         sales: 'Sales'
+      #>unknown_use_of_product: 'Il faut spécifier ce à quoi est destiné le produit (achat, vente ou location)'
     product_component:
       of_product: 'of product'
     production:
@@ -490,8 +501,8 @@ eng:
       to_accountancy: '[{{resource}}] {{mode}} ({{payment_number}}) received from {{attorney}} for {{supplier}} ({{expense_number}})'
     sale_order:
       label:
-        estimate: 'Estimate #{{number}}'
-        order: 'Order #{{number}}'
+        estimate: 'Estimate {{number}}'
+        order: 'Order {{number}}'
       natures:
         estimate: 'Estimate'
         invoice: 'Invoice'
@@ -507,6 +518,7 @@ eng:
     sale_order_line:
       can_not_use_this_tracking: 'You can not use the tracking {{name}}, the requested quantity is greater than the available quantity'
       currency_is_not_sale_order_currency: 'The currency of the price differs from the sale order currency'
+      #>error_no_found_price: 'Aucun prix n'' a pu être trouvé pour ce produit et cette liste de tarif'
       location_can_not_transfer_product: 'The product {{product}} can not be used with {{location}}, because it contains only {{contained_product}} '
       reduction_on: 'Discount of {{percent}}%  on {{product}}'
       tracking: 'S/N: {{serial}}'
@@ -535,6 +547,7 @@ eng:
         period: 'Subscription by date'
         quantity: 'Subscription by number'
     tax:
+      #>amount_must_be_included_between_0_and_1: 'doit être comprise entre 0 et 1'
       natures:
         amount: 'Amount'
         percent: 'Percent'
@@ -553,7 +566,7 @@ eng:
         towed: 'Towed'
         tractor: 'Tractor'
     user:
-      no_right_defined_for_this_part_of_the_application: 'No right defined for this part of the application: {{controller}}#{{action}}'
+      no_right_defined_for_this_part_of_the_application: 'No right defined for this part of the application: {{controller}}{{action}}'
       no_right_defined_for_this_part_of_the_application_and_this_user: 'You can not access to this page'
   notifications:
   number:
@@ -611,4 +624,3 @@ eng:
         stock_transfers: 'Transfers and loss'
         stocks_tasks: 'Stocks'
         tools: 'Tools'
-
