--- a/config/locales/fra/prints/general_ledger.xml
+++ b/config/locales/fra/prints/general_ledger.xml
@@ -9,12 +9,8 @@
 	<style name="Column header" forecolor="#666666" fontName="DejaVu Sans" fontSize="12" isBold="true"/>
 	<style name="Detail" fontName="Arial" fontSize="12">
 		<conditionalStyle>
-			<conditionExpression><![CDATA[$F{dead-at} != null]]></conditionExpression>
-			<style mode="Transparent" forecolor="#FF3333" fill="Solid" vAlign="Top" isBold="false" isItalic="false" isUnderline="false"/>
-		</conditionalStyle>
-		<conditionalStyle>
-			<conditionExpression><![CDATA[$F{race-name}.contains("CROISE")]]></conditionExpression>
-			<style mode="Opaque" backcolor="#FFFF00" fill="Solid" vAlign="Top" isBlankWhenNull="false" isBold="false" isItalic="false" isUnderline="false"/>
+			<conditionExpression><![CDATA[$F{state} == "draft"]]></conditionExpression>
+			<style mode="Transparent" forecolor="#808080" fill="Solid" vAlign="Top" isBold="false" isItalic="true" isUnderline="false"/>
 		</conditionalStyle>
 	</style>
 	<style name="Row" mode="Transparent"/>
@@ -63,6 +59,15 @@
 	<field name="entity-name" class="java.lang.String">
 		<fieldDescription><![CDATA[ancestor::financial-years/@entity-name]]></fieldDescription>
 	</field>
+	<field name="state" class="java.lang.String">
+		<fieldDescription><![CDATA[state]]></fieldDescription>
+	</field>
+	<field name="cumulated-absolute-debit" class="java.lang.String">
+		<fieldDescription><![CDATA[cumulated-absolute-debit]]></fieldDescription>
+	</field>
+	<field name="cumulated-absolute-credit" class="java.lang.String">
+		<fieldDescription><![CDATA[cumulated-absolute-credit]]></fieldDescription>
+	</field>
 	<sortField name="account_number"/>
 	<sortField name="entry_printed-on"/>
 	<variable name="id_1" class="java.lang.Integer" resetType="Group" resetGroup="account" calculation="Count">
@@ -95,15 +100,15 @@
 					<textElement verticalAlignment="Middle">
 						<font fontName="DejaVu Sans"/>
 					</textElement>
-					<text><![CDATA[Total  :]]></text>
+					<text><![CDATA[Totaux  :]]></text>
 				</staticText>
 				<textField evaluationTime="Group" evaluationGroup="account" pattern="###0.00" isBlankWhenNull="true">
-					<reportElement uuid="b6d0c75f-3f1b-4e56-b1cc-00ccbf357120" x="464" y="10" width="90" height="20"/>
+					<reportElement uuid="b6d0c75f-3f1b-4e56-b1cc-00ccbf357120" x="391" y="10" width="56" height="20"/>
 					<textElement/>
 					<textFieldExpression><![CDATA[$V{credit_1}]]></textFieldExpression>
 				</textField>
 				<textField evaluationTime="Group" evaluationGroup="account" pattern="###0.00" isBlankWhenNull="true">
-					<reportElement uuid="437422a6-84dc-4c9b-88fd-6ade5c9cabfc" x="372" y="10" width="92" height="20"/>
+					<reportElement uuid="437422a6-84dc-4c9b-88fd-6ade5c9cabfc" x="345" y="10" width="46" height="20"/>
 					<textElement/>
 					<textFieldExpression><![CDATA[$V{debit_1}]]></textFieldExpression>
 				</textField>
@@ -135,89 +140,97 @@
 		<band splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="22" splitType="Stretch">
+		<band height="40" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="198" y="0" width="93" height="22"/>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="198" y="0" width="67" height="40"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[journal]]></text>
 			</staticText>
-			<line>
-				<reportElement uuid="1a8fa9c0-eac8-4ea0-a29e-72273e994335" positionType="FixRelativeToBottom" x="0" y="20" width="573" height="2"/>
-				<graphicElement>
-					<pen lineWidth="0.5" lineColor="#999999"/>
-				</graphicElement>
-			</line>
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="1" y="0" width="130" height="22"/>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="1" y="0" width="130" height="40"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[écriture]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="131" y="0" width="67" height="22"/>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="131" y="0" width="67" height="40"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[date]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="291" y="0" width="81" height="22"/>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="264" y="0" width="81" height="40"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[pièce]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="372" y="0" width="92" height="22"/>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="345" y="0" width="46" height="40"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[débit]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="464" y="0" width="90" height="22"/>
+				<reportElement uuid="52d5043d-384e-4840-a3c3-eb48a3871d11" style="label-strong" x="391" y="0" width="56" height="40"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<text><![CDATA[crédit]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="bdad3ca1-179e-4136-9b1e-bf4d6851a998" style="label-strong" x="447" y="0" width="46" height="40"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<text><![CDATA[débit cumulé]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="ddaed708-520c-4a0b-b8be-9bfcde3bf0e4" style="label-strong" x="494" y="0" width="60" height="40"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
+				<text><![CDATA[crédit cumulé]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="21" splitType="Stretch">
 			<textField pattern="###0.00" isBlankWhenNull="true">
-				<reportElement uuid="dba1a483-6562-4082-a5d2-a0dd845fe182" style="base" mode="Opaque" x="464" y="0" width="90" height="21"/>
+				<reportElement uuid="dba1a483-6562-4082-a5d2-a0dd845fe182" style="base" mode="Opaque" x="395" y="0" width="56" height="21"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{credit}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement uuid="42865504-0435-4a06-9df0-2151563c4fea" style="base" mode="Opaque" x="372" y="0" width="92" height="21"/>
+				<reportElement uuid="42865504-0435-4a06-9df0-2151563c4fea" style="base" mode="Opaque" x="349" y="0" width="46" height="21"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{debit}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement uuid="b8637e72-0dab-486c-980e-630dbe469547" style="base" mode="Opaque" x="198" y="0" width="93" height="21"/>
+				<reportElement uuid="b8637e72-0dab-486c-980e-630dbe469547" style="base" mode="Opaque" x="198" y="0" width="67" height="21"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{journal_name}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="a38d906a-cdce-41e6-8ec3-ca0b9b9f65b6" style="base" mode="Opaque" x="291" y="0" width="81" height="21"/>
+				<reportElement uuid="a38d906a-cdce-41e6-8ec3-ca0b9b9f65b6" style="base" mode="Opaque" x="268" y="0" width="81" height="21"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{entry_number}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="e39cad02-7296-4b15-be64-83e1005f9da2" style="base" mode="Opaque" x="1" y="0" width="130" height="21"/>
+				<reportElement uuid="e39cad02-7296-4b15-be64-83e1005f9da2" style="Detail" mode="Opaque" x="1" y="0" width="130" height="21"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans" size="9"/>
 				</textElement>
@@ -233,80 +246,94 @@
 			<line>
 				<reportElement uuid="09a03d97-1c8c-4a8b-85a3-1868d25e2f8a" x="2" y="20" width="552" height="1"/>
 			</line>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement uuid="866a80ea-bfc0-4037-88cb-2322a902423a" style="base" mode="Opaque" x="447" y="0" width="46" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{cumulated-absolute-debit}]]></textFieldExpression>
+			</textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement uuid="5bc1b13b-ee0b-4a6b-ac77-6686955890c6" style="base" mode="Opaque" x="494" y="1" width="61" height="19"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{cumulated-absolute-credit}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
 		<band height="6" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="26" splitType="Stretch">
+		<band height="34" splitType="Stretch">
 			<textField evaluationTime="Report">
-				<reportElement uuid="50272410-1b25-4669-88c3-3be64f156f82" style="base" x="514" y="0" width="40" height="22" forecolor="#000000"/>
+				<reportElement uuid="50272410-1b25-4669-88c3-3be64f156f82" style="base" x="514" y="5" width="40" height="22" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy HH.mm.ss">
-				<reportElement uuid="ebf60a3b-b81b-4ee3-b94d-a83ae04dd811" style="base" mode="Transparent" x="2" y="0" width="115" height="22" forecolor="#000000"/>
+				<reportElement uuid="ebf60a3b-b81b-4ee3-b94d-a83ae04dd811" style="base" mode="Transparent" x="2" y="5" width="115" height="22" forecolor="#000000"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="342f7ef7-5da8-4d85-baf2-2c7968aecaed" style="base" x="461" y="0" width="54" height="22" forecolor="#000000"/>
+				<reportElement uuid="342f7ef7-5da8-4d85-baf2-2c7968aecaed" style="base" x="461" y="5" width="54" height="22" forecolor="#000000"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" /"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="3740387f-1656-45d4-b5a7-a671b9df52d6" style="strong" mode="Opaque" x="117" y="10" width="344" height="2" backcolor="#7C9DDD"/>
+				<reportElement uuid="3740387f-1656-45d4-b5a7-a671b9df52d6" style="strong" mode="Opaque" x="117" y="15" width="344" height="2" backcolor="#7C9DDD"/>
 				<textElement verticalAlignment="Middle">
 					<font pdfFontName="Times-Roman"/>
 				</textElement>
 				<text><![CDATA[]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="bed30d3f-2abb-4bc2-a2c2-d4afdaa87984" style="address" x="174" y="1" width="224" height="25"/>
+				<reportElement uuid="bed30d3f-2abb-4bc2-a2c2-d4afdaa87984" style="address" x="174" y="1" width="224" height="33"/>
 				<textElement textAlignment="Center" verticalAlignment="Top"/>
 				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
 	<lastPageFooter>
-		<band height="26">
+		<band height="36">
 			<staticText>
-				<reportElement uuid="6a745fd5-25a2-4de3-87b6-1d920ef1a4c0" style="strong" mode="Opaque" x="117" y="10" width="344" height="2" backcolor="#7C9DDD"/>
+				<reportElement uuid="6a745fd5-25a2-4de3-87b6-1d920ef1a4c0" style="strong" mode="Opaque" x="117" y="15" width="344" height="2" backcolor="#7C9DDD"/>
 				<textElement verticalAlignment="Middle">
 					<font pdfFontName="Times-Roman"/>
 				</textElement>
 				<text><![CDATA[]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement uuid="c5669d5d-31af-4dd7-bf88-534422b21b01" style="base" x="514" y="0" width="40" height="22" forecolor="#000000"/>
+				<reportElement uuid="c5669d5d-31af-4dd7-bf88-534422b21b01" style="base" x="514" y="5" width="40" height="22" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy HH.mm.ss">
-				<reportElement uuid="a98f0540-b3f2-4380-aab0-f9d96ea72b6e" style="base" mode="Transparent" x="2" y="0" width="115" height="22" forecolor="#000000"/>
+				<reportElement uuid="a98f0540-b3f2-4380-aab0-f9d96ea72b6e" style="base" mode="Transparent" x="2" y="5" width="115" height="22" forecolor="#000000"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="5de70a0c-bd99-4937-84fa-c172a5df272f" style="base" x="461" y="0" width="54" height="22" forecolor="#000000"/>
+				<reportElement uuid="5de70a0c-bd99-4937-84fa-c172a5df272f" style="base" x="461" y="5" width="54" height="22" forecolor="#000000"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Open Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" /"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="54969179-47f0-402d-a856-b4ac17a0ad05" style="address" x="174" y="1" width="224" height="25"/>
+				<reportElement uuid="54969179-47f0-402d-a856-b4ac17a0ad05" style="address" x="174" y="1" width="224" height="35"/>
 				<textElement textAlignment="Center" verticalAlignment="Top"/>
 				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
 			</textField>
