--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -266,10 +266,10 @@ fra:
       new: "Ajout d’un nouvel encaissement"
       show: "Encaissement n°%{number} de %{entity}"
     backend/interventions:
-      edit: "Modifier l’intervention %{name}"
+      edit: "Modifier l’intervention %{name} N°%{id}"
       index: "Interventions" #?
       new: "Nouvelle intervention"
-      show: "Intervention n°%{id}" #?
+      show: "%{procedure_name} N°%{id}" #?
     backend/inventories:
       edit: "Modifier l’inventaire"
       index: "Inventaires"
@@ -1146,6 +1146,7 @@ fra:
     last_entities: "Derniers tiers"
     last_events: "Derniers évènements"
     last_incoming_deliveries: "Derniers approvisionnements"
+    last_interventions: "Dernières interventions"
     last_milk_result: "Dernières analyses de lait"
     last_outgoing_deliveries: "Dernières livraisons"
     last_payment_amount: "Montant du dernier encaissement"
